# socks

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  app_runtime.cpp  app_runtime.h  block_outbound.cpp  cert_fetcher.cpp  cert_fetcher.h  cert_manager.cpp  cert_manager.h  certificate_compression.cpp  certificate_compression.h  ch_parser.cpp  ch_parser.h  ci_tproxy_burst.sh  ci_tproxy_hrr.sh  cipher_context.h  client_tunnel_pool.cpp  client_tunnel_pool.h  comprehensive_test.py  config.cpp  config.h  config_dump.inc  config_type_facts.h  connection_context.cpp  connection_context.h  connection_tracker.h  constants.h  context_pool.cpp  context_pool.h  crypto_util.cpp  crypto_util.h  datagram_relay.cpp  datagram_relay.h  direct_outbound.cpp  docker-compose.yml  (+192 more)
.github/workflows/: ci.yml
config/: block_ip.txt  local-client.json  local-server.json
doc/: class.uml  code-review-2026-04-04.md  component.uml  configuration.md  deployment.md  error_handling.md  flow.md  invariants.md  monitor.md  performance_baseline.md  security.md  sequence.uml  testing.md
docker/: Dockerfile  client.json  server.json
docker/config/: client.json  server.json
fuzz/: README.md  ch_parser.dict  ch_parser_fuzz.cpp  fuzz_ch_parser.cpp  fuzz_config.cpp  fuzz_mux_codec.cpp  fuzz_reality_auth.cpp  fuzz_reality_decrypt.cpp  fuzz_socks_codec.cpp  fuzz_socks_handshake.cpp  merge_corpus.sh  mux_codec.dict  mux_codec_fuzz.cpp  replay_crash.sh
fuzz/corpus/ch_parser/: client_hello_with_extensions.seed  minimal_valid.seed  mlkem_hybrid_valid.seed
fuzz/corpus/mux_codec/: ack.seed  header.seed  syn.seed
reality/: config_validation.cpp  config_validation.h  core.h  types.h
reality/handshake/: auth.cpp  auth.h  client_handshaker.cpp  client_handshaker.h  client_handshaker_validation.inc  client_hello_builder.cpp  client_hello_builder.h  fingerprint.cpp  fingerprint.h  fingerprint_blueprint.h  fingerprint_internal.h  fingerprint_mutation_internal.h  fingerprint_patch.h  server_handshake_context.h  server_handshaker.cpp  server_handshaker.h  server_handshaker_auth_flow.inc  server_handshaker_auth_helpers.inc
reality/material/: material_provider.cpp  material_provider.h
reality/policy/: fallback_executor.cpp  fallback_executor.h  fallback_gate.cpp  fallback_gate.h  fallback_request.h
reality/session/: engine.cpp  engine.h  lightweight_client.cpp  lightweight_client.h  record_context.cpp  record_context.h  session.cpp  session.h  session_internal.h
script/: ci_tproxy_test.sh  clang_tidy_fix.py  clean_workspace_artifacts.sh  complexity_gate.py  comprehensive_test.py  gen_report.sh  hrr_reject_test.py  install_openssl_from_source.sh  network_chaos_test.py  perf_baseline.py  perf_queue_sweep.py  perf_tproxy_queue_sweep.py  remove_comments.py  run_coverage.sh  run_test_tier.sh  setup_and_run_other_tests.py  sort_headers_libclang.py  stress_test.py  tproxy_curl_test.sh  tproxy_hrr_reject_test.sh  valgrind_test.py
scripts/: build_resource_review_bundle.py  ci_lint.py  cleanup_demo_rules.sh  cleanup_demo_server.sh  https_static_server.py  plot_resource_curves.py  process_resource_monitor.py  reality_benchmark.py  run_local_client.sh  runtime_env.sh  setup_demo_test_users.sh  slow_http_server.py  socks5_edge_cases.py  socks5_http_case_client.py  socks5_resource_suite.py  socks5_resource_sweep.py  socks5_tcp_load.py  socks5_udp_client.py  socks5_udp_echo_server.py  socks5_udp_edge_cases.py  socks5_udp_multi_target.py  start_demo_client.sh  start_demo_server.sh  test_async_connect_wrapper.cpp  test_config_roundtrip.py  test_dual_outbound.sh  test_http_server.py  test_local_tproxy_http.sh  test_local_tproxy_udp.sh  test_local_tun_https.sh  test_local_tun_udp.sh  test_net_utils_regression.cpp  test_outbound_consistency.py  test_protocol_guards.py  test_proxy_protocol_regression.cpp  test_proxy_reality_connection_regression.cpp  test_proxy_timeout_budget.py  test_proxy_udp_stale_budget.py  test_reality_auth_regression.cpp  test_reality_engine_regression.cpp  (+43 more)
tests/: CMakeLists.txt  cert_fetcher_test.cpp  cert_manager_test.cpp  ch_parser_test.cpp  client_server_integration_test.cpp  client_tunnel_pool_policy_test.cpp  client_tunnel_pool_whitebox_test.cpp  config_test.cpp  config_validation_test.cpp  connection_pool_test.cpp  context_pool_test.cpp  crypto_util_test.cpp  domain_matcher_test.cpp  functional.py  ip_matcher_test.cpp  key_rotator_test.cpp  limits_test.cpp  local_client_handshake_test.cpp  local_client_mock_test.cpp  local_client_test.cpp  log_context_test.cpp  log_test.cpp  mock_mux_connection.h  monitor_server_test.cpp  mux_backpressure_test.cpp  mux_codec_test.cpp  mux_connection_test.cpp  mux_dispatcher_test.cpp  mux_heartbeat_test.cpp  mux_stream_test.cpp  mux_tunnel_test.cpp  net_utils_test.cpp  no_exception_keywords_test.cmake  protocol_edge_test.cpp  reality_auth_test.cpp  reality_engine_test.cpp  reality_fingerprint_test.cpp  reality_messages_test.cpp  reflect_test.cpp  remote_server_mux_test.cpp  (+30 more)
tls/: certificate_compression.cpp  certificate_compression.h  ch_parser.cpp  ch_parser.h  cipher_context.h  cipher_suite.cpp  cipher_suite.h  core.h  crypto_util.cpp  crypto_util.h  handshake_builder.cpp  handshake_builder.h  handshake_message.cpp  handshake_message.h  handshake_reassembler.cpp  handshake_reassembler.h  key_schedule.cpp  key_schedule.h  record_layer.cpp  record_layer.h  record_validation.cpp  record_validation.h  server_name.cpp  server_name.h  transcript.cpp  transcript.h
