cmake_minimum_required(VERSION 3.16)

macro(add_socks_test NAME)
    add_executable(${NAME} ${NAME}.cpp)
    target_link_libraries(${NAME} PRIVATE
        socks_core
        GTest::gtest_main
        GTest::gmock_main
    )
    include(GoogleTest)
    gtest_discover_tests(${NAME} DISCOVERY_TIMEOUT 60)
endmacro()

add_socks_test(cert_manager_test)
add_socks_test(log_test)
add_socks_test(transcript_test)
add_socks_test(log_context_test)
add_socks_test(context_pool_test)
add_socks_test(statistics_test)
add_socks_test(monitor_server_test)
target_link_options(
    monitor_server_test
    PRIVATE
        -Wl,--wrap=socket
        -Wl,--wrap=setsockopt
        -Wl,--wrap=listen
)
add_socks_test(net_utils_test)
target_link_options(
    net_utils_test
    PRIVATE
        -Wl,--wrap=setsockopt
)
add_socks_test(reality_engine_test)
add_socks_test(ip_matcher_test)
add_socks_test(mux_codec_test)
add_socks_test(socks_codec_test)
add_socks_test(socks_session_test)
target_link_options(
    socks_session_test
    PRIVATE
        -Wl,--wrap=shutdown
        -Wl,--wrap=close
)
add_socks_test(crypto_util_test)
target_link_options(
    crypto_util_test
    PRIVATE
        -Wl,--wrap=EVP_PKEY_CTX_set1_hkdf_key
        -Wl,--wrap=EVP_PKEY_CTX_set1_hkdf_salt
        -Wl,--wrap=EVP_CIPHER_CTX_ctrl
        -Wl,--wrap=X509_get_pubkey
        -Wl,--wrap=RAND_bytes
        -Wl,--wrap=EVP_PKEY_CTX_new_id
        -Wl,--wrap=EVP_PKEY_new_raw_private_key
        -Wl,--wrap=EVP_PKEY_CTX_add1_hkdf_info
        -Wl,--wrap=EVP_MD_CTX_new
        -Wl,--wrap=EVP_PKEY_derive
)
add_socks_test(router_test)
add_socks_test(domain_matcher_test)
add_socks_test(ch_parser_test)
add_socks_test(reality_messages_test)
target_link_options(
    reality_messages_test
    PRIVATE
        -Wl,--wrap=RAND_bytes
        -Wl,--wrap=EVP_PKEY_CTX_new_id
        -Wl,--wrap=EVP_PKEY_keygen
        -Wl,--wrap=EVP_PKEY_get_octet_string_param
        -Wl,--wrap=EVP_MD_CTX_new
        -Wl,--wrap=EVP_DigestSign
)
add_socks_test(tls_cipher_suite_test)
add_socks_test(tls_record_validation_test)
add_socks_test(tls_record_layer_test)
target_link_options(
    tls_record_layer_test
    PRIVATE
        -Wl,--wrap=RAND_bytes
)
add_socks_test(config_test)
target_link_options(
    config_test
    PRIVATE
        -Wl,--wrap=fread
        -Wl,--wrap=ferror
)
add_socks_test(reflect_test)
add_socks_test(tls_key_schedule_test)
add_socks_test(socks_client_test)
target_link_options(
    socks_client_test
    PRIVATE
        -Wl,--wrap=socket
        -Wl,--wrap=setsockopt
        -Wl,--wrap=accept
        -Wl,--wrap=accept4
)
add_socks_test(reality_fingerprint_test)
add_socks_test(reality_auth_test)
add_socks_test(mux_stream_test)
add_socks_test(mux_connection_test)
add_socks_test(mux_heartbeat_test)
target_compile_definitions(mux_heartbeat_test PRIVATE SPDLOG_ACTIVE_LEVEL=0)
add_socks_test(mux_dispatcher_test)
add_socks_test(replay_cache_test)
add_socks_test(upstream_test)
target_link_options(
    upstream_test
    PRIVATE
        -Wl,--wrap=setsockopt
)
add_socks_test(cert_fetcher_test)
add_socks_test(key_rotator_test)
add_socks_test(socks_client_mock_test)
add_socks_test(socks_client_handshake_test)
add_socks_test(client_tunnel_pool_policy_test)
add_socks_test(client_tunnel_pool_whitebox_test)
target_link_options(
    client_tunnel_pool_whitebox_test
    PRIVATE
        -Wl,--wrap=RAND_bytes
        -Wl,--wrap=EVP_PKEY_CTX_add1_hkdf_info
        -Wl,--wrap=EVP_CIPHER_CTX_ctrl
        -Wl,--wrap=EVP_PKEY_derive
        -Wl,--wrap=EVP_EncryptInit_ex
        -Wl,--wrap=socket
)
add_socks_test(client_server_integration_test)
add_socks_test(connection_pool_test)
add_socks_test(limits_test)
add_socks_test(udp_integration_test)
add_socks_test(protocol_edge_test)
add_socks_test(socks_protocol_test)
add_socks_test(remote_server_test)
target_link_options(
    remote_server_test
    PRIVATE
        -Wl,--wrap=socket
        -Wl,--wrap=setsockopt
        -Wl,--wrap=listen
        -Wl,--wrap=close
        -Wl,--wrap=RAND_bytes
        -Wl,--wrap=EVP_PKEY_new_raw_private_key
        -Wl,--wrap=EVP_PKEY_derive
        -Wl,--wrap=EVP_PKEY_CTX_add1_hkdf_info
)
add_socks_test(remote_server_mux_test)
add_socks_test(tproxy_udp_session_test)
target_link_options(
    tproxy_udp_session_test
    PRIVATE
        -Wl,--wrap=socket
        -Wl,--wrap=setsockopt
        -Wl,--wrap=bind
        -Wl,--wrap=recvmsg
)
add_socks_test(tproxy_tcp_session_test)
target_link_options(
    tproxy_tcp_session_test
    PRIVATE
        -Wl,--wrap=shutdown
        -Wl,--wrap=close
)
add_socks_test(tproxy_udp_sender_test)
target_link_options(
    tproxy_udp_sender_test
    PRIVATE
        -Wl,--wrap=socket
        -Wl,--wrap=setsockopt
)
add_socks_test(udp_socks_session_test)
target_link_options(
    udp_socks_session_test
    PRIVATE
        -Wl,--wrap=bind
        -Wl,--wrap=setsockopt
        -Wl,--wrap=getsockname
        -Wl,--wrap=close
)
add_socks_test(tcp_socks_session_test)
target_link_options(
    tcp_socks_session_test
    PRIVATE
        -Wl,--wrap=shutdown
        -Wl,--wrap=close
)
add_socks_test(remote_session_test)
target_link_options(
    remote_session_test
    PRIVATE
        -Wl,--wrap=setsockopt
)
add_socks_test(remote_udp_session_test)
add_socks_test(router_file_test)

add_test(NAME tproxy_integration_test COMMAND ${CMAKE_SOURCE_DIR}/tests/tproxy_integration_test.sh)
set_tests_properties(tproxy_integration_test PROPERTIES SKIP_RETURN_CODE 77)
set_tests_properties(tproxy_integration_test PROPERTIES ENVIRONMENT "BIN=${CMAKE_BINARY_DIR}/socks")
